Closed Bug 336983 Opened 18 years ago Closed 18 years ago

OOM crash [@ ConvertHTMLtoUCS2] unicodeData Pointer allocated by nsMemory::Alloc dereferenced without NULL check

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity, crash)

Crash Data

Attachments

(1 obsolete file)

 
Summary: OOM crash [@ nsIsIndexFrame::GetEncoder] unicodeData Pointer allocated by nsMemory::Alloc dereferenced without NULL check → OOM crash [@ ConvertHTMLtoUCS2] unicodeData Pointer allocated by nsMemory::Alloc dereferenced without NULL check
Attached patch look before leaping (obsolete) — Splinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #221190 - Flags: superreview?(bzbarsky)
Attachment #221190 - Flags: review?(bzbarsky)
Attachment #221190 - Flags: superreview?(bzbarsky)
Attachment #221190 - Flags: superreview+
Attachment #221190 - Flags: review?(bzbarsky)
Attachment #221190 - Flags: review+
Comment on attachment 221190 [details] [diff] [review]
look before leaping

mozilla/widget/src/gtk2/nsClipboard.cpp 	1.27
Attachment #221190 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Crash Signature: [@ ConvertHTMLtoUCS2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: