Bug 336983 OOM crash [@ ConvertHTMLtoUCS2] unicodeData Pointer allocated by nsMemory::Alloc dereferenced without NULL check r=bz sr=bz